--- a/styles/style.css
+++ b/styles/style.css
@@ -8,13 +8,6 @@ html {
   block-size: 100%;
 }
 
-video {
-  width: 100%;
-  height: 100%;
-  object-position: center;
-  object-fit: cover;
-}
-
 img {
   object-fit: cover;
   object-position: center;
@@ -64,23 +57,25 @@ ol {
 
 .result {
   grid-area: result;
-  display: grid;
-  grid-template-rows: 78px 402px 54px;
-  grid-template-areas:
-   "result_none"
-   "result__video"
-   "search-form";
+  display: flex;
+  flex-direction: column;
 }
 
 .result__video-container {
   position: relative;
-  grid-area: result__video;
-  max-height: 386px;
   max-width: 711px;
+  padding-top: 78px;
+  padding-bottom: 11px;
+}
+
+.result__video {
+  max-height: 386px;
+  width: 100%; 
+  object-position: center;
+  object-fit: cover;
 }
 
 .search-form {
-  grid-area: search-form;
   display: grid;
   grid-template-columns: 225px 212px 194px;
   gap: 40px;
